--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,18 @@
 # Site settings
 title: Himanshu Aggrawal
 description: 'Yet another random guy'
-url: 'http://joshgerdes.com/jekyll-uno'
-baseurl: '/jekyll-uno/'
+url: 'http://himanshua.com/jekyll'
+baseurl: '/jekyll/'
 # google_analytics: 'UA-XXXXXX-X'
 # disqus_shortname: 'your-disqus-name'
 
 author:
   name: 'Himanshu Aggrawal'
-  email: himanshu@gmail.com
-  twitter_username: joshgerdes
-  facebook_username: joshgerdes
-  github_username:  joshgerdes
-  linkedin_username:  joshgerdes
+  email: himanshu@rice.edu
+  twitter_username:
+  facebook_username:
+  github_username:
+  linkedin_username: haggrawal
 
 defaults:
   -
