--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
 title: Himanshu Aggrawal
 description: 'Yet another random guy'
-url: 'http://himanshua.com/jekyll'
-baseurl: '/jekyll/'
+url: 'https://ahimanshu13.github.io/'
+baseurl: '/'
 # google_analytics: 'UA-XXXXXX-X'
 # disqus_shortname: 'your-disqus-name'
 
