--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Himanshu Aggrawal
 description: 'Yet another random guy'
-url: 'https://ahimanshu13.github.io/'
+url: 'https://himanshua.com'
 baseurl: '/'
 # google_analytics: 'UA-XXXXXX-X'
 # disqus_shortname: 'your-disqus-name'
