--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
 title: Himanshu Aggrawal
 description: 'Yet another random guy'
-url: 'https://himanshua.com'
-baseurl: '/'
+url: 'https://himanshua.com/'
+baseurl: 'https://himanshua.com/'
 # google_analytics: 'UA-XXXXXX-X'
 # disqus_shortname: 'your-disqus-name'
 
