--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Himanshu Aggrawal
 description: 'Yet another random guy'
 url: 'http://himanshua.com/'
-baseurl: 'http://himanshua.com/'
+baseurl: 'http://himanshua.com'
 # google_analytics: 'UA-XXXXXX-X'
 # disqus_shortname: 'your-disqus-name'
 
