--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ author:
   github_username:
   linkedin_username: haggrawal
   web: http://www.ece.rice.edu/~ab28
+  scholar: https://scholar.google.com/citations?user=4pWM03cAAAAJ&hl=en
 
 defaults:
   -
