--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Himanshu Aggrawal
-description: 'Yet another random guy'
+description: 'Inventor | Hacker | Guitarist'
 url: 'http://himanshua.com/'
 baseurl: 'http://himanshua.com/'
 google_analytics: 'UA-80358408-1'
