--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
 title: Himanshu Aggrawal
 description: 'Inventor | Hacker | Guitarist'
-url: 'http://himanshua.com/'
-baseurl: 'http://himanshua.com/'
+url: 'http://www.himanshua.com/'
+baseurl: 'http://www.himanshua.com/'
 google_analytics: 'UA-80358408-1'
 # disqus_shortname: 'your-disqus-name'
 
