--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ author:
   name: 'Himanshu Aggrawal'
   email:
   twitter_username:
-  facebook_username:
+  facebook_username: ahimanshu
   github_username:
   linkedin_username: haggrawal
   # web: http://www.ece.rice.edu/~ab28
